--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,10 @@ body {
   display: none;
   position: relative;
   width: 100%;
-  height: calc(100vh - 200px); /* ボタンエリアも含めた高さ */
+  height: calc(100vh); /* ボタンエリアも含めた高さ */
   text-align: center;
   z-index: 1; /* buttonContainer よりも前面に表示 */
+  padding-bottom: 100px;
 }
 
 #displayText {
@@ -42,7 +43,7 @@ body {
   bottom: 0;
   width: 100%;
   height: 100px;
-  background-color: #f1f1f1;
+  background-color: rgba(#d0d0d0, 0.4);
   justify-content: center;
   align-items: center;
   gap: 10px;
